--- a/features/authorization/build.gradle
+++ b/features/authorization/build.gradle
@@ -1,14 +1,13 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.dynamic-feature'
     id 'kotlin-android'
-    id 'kotlin-kapt'
+    id "kotlin-kapt"
 }
-
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "arctic.fox.df"
+        applicationId "fox.features.authorization"
         minSdk 24
         targetSdk 31
         versionCode 1
@@ -23,26 +22,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    buildFeatures {
+    buildFeatures{
         dataBinding true
     }
-
-    dynamicFeatures = [':splash', ':features:authorization']
 }
 
 dependencies {
+    implementation project(":app")
+
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.1")
-    implementation("androidx.navigation:navigation-ui-ktx:2.4.1")
-    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.1")
+    implementation 'androidx.core:core-ktx:1.7.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -52,4 +43,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.annotation:annotation:1.3.0'
 }
