--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
         dataBinding true
     }
 
-    dynamicFeatures = [':splash', ':features:authorization']
+    dynamicFeatures = [':features:authorization']
 }
 
 dependencies {
