--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,12 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdk 31
-
     defaultConfig {
         applicationId "arctic.fox.df"
-        minSdk 24
-        targetSdk 31
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -22,13 +14,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 
     buildFeatures {
@@ -40,14 +25,14 @@ android {
 
 dependencies {
 
-    implementation("androidx.navigation:navigation-fragment-ktx:2.4.1")
-    implementation("androidx.navigation:navigation-ui-ktx:2.4.1")
-    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.1")
+    implementation("androidx.core:core-ktx:${versions.CoreKtx}")
+    implementation("androidx.appcompat:appcompat:${versions.AppCompat}")
+    implementation("com.google.android.material:material:${versions.MaterialDesign}")
+    implementation("androidx.constraintlayout:constraintlayout:${versions.ConstraintLayout}")
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation("androidx.navigation:navigation-fragment-ktx:${versions.Navigation}")
+    implementation("androidx.navigation:navigation-ui-ktx:${versions.Navigation}")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:${versions.Navigation}")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
