--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,44 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+    }
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    ext {
+        versions = [
+                "CoreKtx"         : "1.7.0",
+                "AppCompat"       : "1.4.1",
+                "MaterialDesign"  : "1.5.0",
+                "ConstraintLayout": "2.1.3",
+                "FragmentKtx"     : "1.4.1",
+                "Navigation"      : "2.4.1"
+        ]
+    }
+}
+
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+
+            android {
+                compileSdkVersion 32
+
+                defaultConfig {
+                    minSdkVersion 24
+                    targetSdkVersion 32
+                    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+                }
+
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_11
+                    targetCompatibility JavaVersion.VERSION_11
+                }
+
+                kotlinOptions {
+                    jvmTarget = "11"
+                }
+            }
+
+        }
     }
 }
 
