--- a/features/authorization/build.gradle
+++ b/features/authorization/build.gradle
@@ -1,28 +1,9 @@
-plugins {
-    id 'com.android.dynamic-feature'
-    id 'kotlin-android'
-    id "kotlin-kapt"
-}
-android {
-    compileSdk 31
+apply plugin: 'com.android.dynamic-feature'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
-    defaultConfig {
-        applicationId "fox.features.authorization"
-        minSdk 24
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    buildFeatures{
+android{
+    buildFeatures {
         dataBinding true
     }
 }
@@ -30,15 +11,12 @@ android {
 dependencies {
     implementation project(":app")
 
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+    implementation("androidx.core:core-ktx:${versions.CoreKtx}")
+    implementation("androidx.appcompat:appcompat:${versions.AppCompat}")
+    implementation("com.google.android.material:material:${versions.MaterialDesign}")
+    implementation("androidx.constraintlayout:constraintlayout:${versions.ConstraintLayout}")
 
-    implementation("androidx.navigation:navigation-fragment-ktx:2.4.1")
-    implementation 'androidx.core:core-ktx:1.7.0'
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation("androidx.navigation:navigation-fragment-ktx:${versions.Navigation}")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
