--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
                 "ConstraintLayout": "2.1.3",
                 "FragmentKtx"     : "1.4.1",
                 "Navigation"      : "2.4.1",
-                "FirebaseAnalytics": "20.1.2"
+                "FirebaseAnalytics": "20.1.2",
+                "FirebaseEmailAuth": "21.0.3"
         ]
     }
 }
