--- a/features/splash/build.gradle
+++ b/features/splash/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:${versions.Navigation}")
 
+    implementation("com.google.firebase:firebase-auth-ktx:@{versions.FirebaseEmailAuth}")
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
