--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:${versions.Navigation}")
 
     implementation("com.google.firebase:firebase-analytics:${versions.FirebaseAnalytics}")
+    implementation("com.google.firebase:firebase-auth-ktx:${versions.FirebaseEmailAuth}")
+//    implementation "com.google.firebase:firebase-iid:21.1.0"
+
+    implementation("com.google.dagger:dagger:${versions.Dagger2}")
+    kapt("com.google.dagger:dagger-compiler:${versions.Dagger2}")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
