--- a/features/splash/build.gradle
+++ b/features/splash/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.dynamic-feature'
     id 'kotlin-android'
     id "kotlin-kapt"
+    id 'com.google.gms.google-services'
 }
 
 android{
@@ -20,7 +21,11 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:${versions.Navigation}")
 
-    implementation("com.google.firebase:firebase-auth-ktx:@{versions.FirebaseEmailAuth}")
+    implementation("com.google.firebase:firebase-auth-ktx:${versions.FirebaseEmailAuth}")
+
+
+    implementation("com.google.dagger:dagger:${versions.Dagger2}")
+    kapt("com.google.dagger:dagger-compiler:${versions.Dagger2}")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
