--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         dataBinding true
     }
 
-    dynamicFeatures = [':features:authorization', ':features:splash']
+    dynamicFeatures = [':features:authorization', ':features:splash', ':features:registration']
 }
 
 dependencies {
