--- a/features/registration/build.gradle
+++ b/features/registration/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation("com.google.android.material:material:${versions.MaterialDesign}")
     implementation("androidx.constraintlayout:constraintlayout:${versions.ConstraintLayout}")
 
+    implementation("androidx.fragment:fragment-ktx:${versions.FragmentKtx}")
+
     implementation("com.google.firebase:firebase-analytics:${versions.FirebaseAnalytics}")
     implementation("com.google.firebase:firebase-auth-ktx:${versions.FirebaseEmailAuth}")
     
