create profile screen

--- a/features/registration/build.gradle
+++ b/features/registration/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     implementation("com.google.firebase:firebase-analytics:${versions.FirebaseAnalytics}")
     implementation("com.google.firebase:firebase-auth-ktx:${versions.FirebaseEmailAuth}")
+
+    implementation("androidx.navigation:navigation-fragment-ktx:${versions.Navigation}")
     
     implementation("com.google.dagger:dagger:${versions.Dagger2}")
     kapt("com.google.dagger:dagger-compiler:${versions.Dagger2}")
