--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="arctic.fox.df">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:name=".AndroidApplication"
         android:label="@string/app_name"
@@ -12,6 +11,7 @@
         android:theme="@style/Theme.ArtichFoxDynamicFeature">
         <activity
             android:name=".presentation.MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
