--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,17 @@ buildscript {
 
     ext {
         versions = [
-                "CoreKtx"         : "1.7.0",
-                "AppCompat"       : "1.4.1",
-                "MaterialDesign"  : "1.5.0",
-                "ConstraintLayout": "2.1.3",
-                "FragmentKtx"     : "1.4.1",
-                "Navigation"      : "2.4.1",
+                "CoreKtx"          : "1.7.0",
+                "AppCompat"        : "1.4.1",
+                "MaterialDesign"   : "1.5.0",
+                "ConstraintLayout" : "2.1.3",
+                "FragmentKtx"      : "1.4.1",
+                "Navigation"       : "2.4.1",
+                "Lifecycle"        : "2.4.1",
                 "FirebaseAnalytics": "20.1.2",
                 "FirebaseEmailAuth": "21.0.3",
-                "FirebaseDF": "16.0.0-beta01",
-                "Dagger2": "2.41"
+                "FirebaseDF"       : "16.0.0-beta01",
+                "Dagger2"          : "2.41"
         ]
     }
 }
