--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':app'
 include ':features:authorization'
 include ':features:splash'
 include ':features:registration'
+include ':lib:lifecycle'
