--- a/features/splash/build.gradle
+++ b/features/splash/build.gradle
@@ -12,6 +12,7 @@ android{
 
 dependencies {
     implementation project(":app")
+    implementation project(":lib:lifecycle")
 
     implementation("androidx.core:core-ktx:${versions.CoreKtx}")
     implementation("androidx.appcompat:appcompat:${versions.AppCompat}")
